hutool json change to jackson and fix bug